Design docx tasks

--- a/src/app/styles/best-page.css
+++ b/src/app/styles/best-page.css
@@ -153,11 +153,12 @@
 }
 
 .compare-container thead {
-  position:sticky;
-  top: -1px;
-  z-index: 1000;
+  position:static;
+ 
 }
-
+.compare-container thead.nonSticky {
+  position:static !important;
+}
 .compare-container thead tr th .device-name .compare_image {
   width: 50px !important;
   height: 50px !important;
@@ -166,6 +167,9 @@
 
 .compare-container thead.isSticky{
   box-shadow: 0px 2px 8px rgba(77, 82, 136, 0.15);
+  position: fixed ;
+  top: -1px;
+  z-index: 1000;
 }
 
 .compare-container thead.isSticky tr th:first-child{
@@ -192,12 +196,16 @@
 .compare-container thead.isSticky tr th .best-tag-product{
   position: static !important;
 }
+.compare-container thead tr th:not(:first-child),
+.compare-container tbody tr td{
+  max-width: 193px;
+}
 
 .see_all_btn_outline {
   border: 1px solid var(--secondary-color) !important;
   border-radius: 5px;
-  background: var(--white-color) !important;
-  color: var(--secondary-color) !important;
+  background:var(--secondary-color)  !important;
+  color: var(--white-color) !important;
   display: flex !important;
   align-items: center;
   justify-content: center;
@@ -215,8 +223,8 @@
 }
 
 .see_all_btn_outline:hover {
-  background: var(--white-color) !important;
-  color: var(--secondary-color) !important;
+  background: #326ebf !important;
+  color:   var(--white-color) !important;
 }
 
 .see_all_btn_filled {
@@ -241,9 +249,9 @@
 }
 
 .see_all_btn_filled:hover {
-  background: #F4F7FB !important;
-  color: var(--secondary-color) !important;
-  border: 1px solid var(--secondary-color) !important;
+  background: #326ebf !important;
+  color: #fff !important;
+  border: 1px solid #326ebf !important;
 }
 
 .compare-container-wrapper {
@@ -984,7 +992,12 @@ body .product-listing-inner-content .score-section .score-detail h6 {
     display: block;
 } */
 .pros-corns-section.corns ul li::before{
-  top: 8px !important;
+  content: url(/images/close.svg)!important;
+  position: absolute;
+  right: 100%;
+  top: 8px!important;
+  bottom: 0;
+  padding-right: 8px;
 }
 .sidebar-width {
 
