blog page spacing

--- a/src/app/styles/product.css
+++ b/src/app/styles/product.css
@@ -415,12 +415,12 @@
 }
 
 .table-accordion .accordion-button .show-btn {
-    background:  #F4F7FB  ;
+    background: var(--secondary-color)  ;
     padding: 4px 15px;
     border-radius: 3px;
     font-weight: 400;
     font-size: 14px;
-    color:var(--secondary-color);
+    color: #F4F7FB;
     display: flex;
     align-items: center;
     justify-content: center;
