I have fixed asana's tasks

--- a/src/app/styles/best-page.css
+++ b/src/app/styles/best-page.css
@@ -198,7 +198,8 @@
 }
 .compare-container thead tr th:not(:first-child),
 .compare-container tbody tr td{
-  max-width: 193px;
+  max-width: 189px;
+  width: 189px;
 }
 
 .see_all_btn_outline {
@@ -1040,6 +1041,14 @@ body .product-listing-inner-content .score-section .score-detail h6 {
 }
 .best-product-listing .table-accordion .accordion-button .query {
   font-size: 15px !important;
+}
+.table-accordion .accordion-button div{
+  text-transform: uppercase;
+  font-weight: 400 !important;
+  font-size: 16px;
+  line-height: 34px;
+  color: var(--heading-color);
+  font-family: 'Lato', sans-serif !important;
 }
 
 .best-product-listing .table-accordion .spec-section .query {
