--- a/src/app/styles/product.css
+++ b/src/app/styles/product.css
@@ -393,14 +393,7 @@
     display: none;
 }
 
-.table-accordion .accordion-button h6{
-    text-transform: uppercase;
-    font-weight: 400 !important;
-    font-size: 18px;
-    line-height: 34px;
-    color: var(--heading-color);
-    font-family: 'Lato', sans-serif !important;
-}
+
 
 .table-accordion .accordion-button .count{
     background: var(--secondary-color);
@@ -415,17 +408,17 @@
 }
 
 .table-accordion .accordion-button .show-btn {
-    background: var(--secondary-color)  ;
+    background: #F4F7FB  ;
     padding: 4px 15px;
     border-radius: 3px;
     font-weight: 400;
     font-size: 14px;
-    color: #F4F7FB;
+    color:var(--secondary-color) ;
     display: flex;
     align-items: center;
     justify-content: center;
     min-width: 120px;
-    border: 1px solid  var(--secondary-color);
+    /* border: 1px solid  var(--secondary-color); */
 }
 
 .table-accordion .accordion-button .show-btn:hover{
@@ -439,12 +432,12 @@
 }
 
 .table-accordion .accordion-button .hide-btn {
-    background:  var(--secondary-color);
+    background:#F4F7FB;
     padding: 4px 15px;
     border-radius: 3px;
     font-weight: 400;
     font-size: 14px;
-    color: #F4F7FB;
+    color:  var(--secondary-color) ;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -595,17 +588,18 @@
 }
 
 .compare-accordion .accordion-button .show-btn {
-    background: var(--secondary-color);
-    padding: 8px 15px;
+    background:#F4F7FB;
+    padding: 8px 10px;
     border-radius: 3px;
     font-weight: 400;
     font-size: 14px;
-    color: #F4F7FB;
+    color: var(--secondary-color) ;
     display: flex;
     align-items: center;
     justify-content: center;
     min-width: 120px;
-    border: 1px solid var(--secondary-color);
+    /* border: 1p; */
+    text-transform: uppercase;
 }
 
 .compare-accordion .accordion-button .show-btn i{
@@ -619,17 +613,18 @@
 }
 
 .compare-accordion .accordion-button .hide-btn {
-    background:var(--secondary-color) ;
-    padding: 8px 15px;
+    background:#F4F7FB ;
+    padding: 8px 10px;
     border-radius: 3px;
     font-weight: 400;
     font-size: 14px;
-    color: #F4F7FB;
+    color: var(--secondary-color) ;
     display: flex;
     align-items: center;
     justify-content: center;
     min-width: 120px;
     border: 1px solid var(--secondary-color);
+    text-transform: uppercase;
 }
 
 .compare-accordion .accordion-button .hide-btn i{
@@ -962,4 +957,11 @@
   .compare-accordion .accordion-button h3{
     color: var(--primary-color);
   }
- 
+  .table-accordion .accordion-button div{
+    text-transform: uppercase;
+    font-weight: 400 !important;
+    font-size: 18px;
+    line-height: 34px;
+    color: var(--heading-color);
+    font-family: 'Lato', sans-serif !important;
+}
