--- a/src/app/styles/comparison.css
+++ b/src/app/styles/comparison.css
@@ -46,7 +46,7 @@
     z-index: 2;
     cursor: pointer;
     opacity: 0;
-    transition: visibility 0s, opacity 0.5s linear;
+    transition: visibility 0s, opacity 0.5s ease-in 0.2;
 }
 
 .comparison-card:hover:before, .comparison-card:hover .close_icon{
