--- a/src/app/styles/product.css
+++ b/src/app/styles/product.css
@@ -108,7 +108,7 @@
     margin: 3px 0;
 }
 
-.score-section .score-detail h5, .score-section .score-detail p{
+.score-section .score-detail .query, .score-section .score-detail p{
     font-weight: 400 !important;
     font-size: 20px;
     line-height: 34px;
@@ -119,7 +119,7 @@
     font-family: 'Lato', sans-serif !important;
 }
 
-.score-section .score-detail h5 span, .score-section .score-detail p span{
+.score-section .score-detail .query span, .score-section .score-detail p span{
     width: 20px;
     height: 20px;
     display: flex;
@@ -130,7 +130,7 @@
     box-shadow: 0px 0px 3px #888;
 }
 
-.score-section .score-detail h5 span svg, .score-section .score-detail p span svg {
+.score-section .score-detail .query span svg, .score-section .score-detail p span svg {
     width: 12px;
     height: 12px;
     fill: var(--heading-color);
@@ -150,11 +150,11 @@
     background: var(--secondary-color);
 }
 
-.color-change .score-detail h5 {
+.color-change .score-detail .query {
     color: var(--secondary-color);
 }
 
-.color-change .score-detail h5 span svg {
+.color-change .score-detail .query span svg {
     fill: var(--secondary-color);
     opacity: 70%;
 }
@@ -470,7 +470,7 @@
     padding: 5px 0 0;
 }
 
-.table-accordion .spec-section h5 {
+.table-accordion .spec-section .query {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.4;
@@ -480,7 +480,7 @@
     color: var(--heading-color);
 }
 
-.table-accordion .spec-section h5 span {
+.table-accordion .spec-section .query span {
     width: 16px;
     height: 16px;
     display: inline-flex;
@@ -492,7 +492,7 @@
     margin:0 5px;
 }
 
-.table-accordion .spec-section h5 span svg {
+.table-accordion .spec-section .query span svg {
     width: 12px;
     height: 12px;
     fill: var(--heading-color);
@@ -508,7 +508,7 @@
     width: 50%;
 }
 
-.table-accordion .spec-section .spec-item .spec-col h5 .hover_container{
+.table-accordion .spec-section .spec-item .spec-col .query .hover_container{
     position: relative;
     width: auto;
     height: auto;
