--- a/src/app/styles/best-page.css
+++ b/src/app/styles/best-page.css
@@ -1043,7 +1043,7 @@ body .product-listing-inner-content .score-section .score-detail h6 {
   font-size: 15px !important;
 }
 .table-accordion .accordion-button div{
-  text-transform: uppercase;
+  text-transform: capitalize !important;
   font-weight: 400 !important;
   font-size: 16px;
   line-height: 34px;
