--- a/src/app/styles/comparison.css
+++ b/src/app/styles/comparison.css
@@ -182,6 +182,11 @@
     line-height: 1.4;
     opacity: 70%;
 }
+.add-product .add-product-inner-content p:hover{
+    color: var(--heading-color);
+    cursor: pointer;
+    opacity: 1;
+}
 
 .add-product-modal {
     position: fixed;
