--- a/src/app/styles/best-page.css
+++ b/src/app/styles/best-page.css
@@ -324,14 +324,14 @@
   margin: 0 0 20px;
 }
 
-.filter-section h6 {
+.filter-section h4 {
   background: #f4f7fb;
   padding: 8px 10px;
   text-transform: uppercase;
   margin: 0 0 8px !important;
   color: var(--heading-color);
   font-weight: 600 !important;
-  font-size: 16px;
+  font-size: 16px !important;
   line-height: 34px;
   text-transform: uppercase;
   font-family: "BR Hendrix Semi Bold";
