--- a/src/app/styles/best-page.css
+++ b/src/app/styles/best-page.css
@@ -323,7 +323,9 @@
 .filter-section {
   margin: 0 0 20px;
 }
-
+.product-listing-inner-content-table-accordion .product-listing-inner-content-table-accordion-btn .accordion-button{
+  justify-content: center !important;
+}
 .filter-section h4 {
   background: #f4f7fb;
   padding: 8px 10px;
@@ -1043,12 +1045,17 @@ body .product-listing-inner-content .score-section .score-detail h6 {
   font-size: 15px !important;
 }
 .table-accordion .accordion-button div{
-  text-transform: capitalize !important;
+  text-transform: uppercase !important;
   font-weight: 400 !important;
   font-size: 16px;
   line-height: 34px;
   color: var(--heading-color);
   font-family: 'Lato', sans-serif !important;
+}
+.table-accordion .accordion-button div .show-btn,
+.table-accordion .accordion-button div .hide-btn{
+text-transform: capitalize;
+padding: 4px 15px;
 }
 
 .best-product-listing .table-accordion .spec-section .query {
