--- a/src/app/styles/product.css
+++ b/src/app/styles/product.css
@@ -409,7 +409,8 @@
 
 .table-accordion .accordion-button .show-btn {
     background: #F4F7FB  ;
-    padding: 4px 15px;
+    /* padding: 4px 10px; */
+    text-transform: capitalize !important;
     border-radius: 3px;
     font-weight: 400;
     font-size: 14px;
@@ -424,7 +425,7 @@
 .table-accordion .accordion-button .show-btn:hover{
     background: #326ebf;
     color: #F4F7FB;
-    border: 1px solid #326ebf;
+    /* border: 1px solid #326ebf; */
 }
 
 .table-accordion .accordion-button .show-btn i{
@@ -433,16 +434,17 @@
 
 .table-accordion .accordion-button .hide-btn {
     background:#F4F7FB;
-    padding: 4px 15px;
+    /* padding: 4px 10px; */
     border-radius: 3px;
     font-weight: 400;
+    text-transform: capitalize !important;
     font-size: 14px;
     color:  var(--secondary-color) ;
     display: flex;
     align-items: center;
     justify-content: center;
     min-width: 120px;
-    /* border: 1px solid var(--secondary-color); */
+    border: 1px solid var(--secondary-color);
 }
 
 .table-accordion .accordion-button .hide-btn:hover{
@@ -586,10 +588,13 @@
     color: var(--heading-color);
     font-family: 'BR Hendrix Semi Bold';
 }
-
+.compare-accordion .accordion-button div{
+    color: var(--primary-color);
+    /* font-size: 32px !important; */
+}
 .compare-accordion .accordion-button .show-btn {
     background:#F4F7FB;
-    padding: 8px 10px;
+    padding: 4px 10px;
     border-radius: 3px;
     font-weight: 400;
     font-size: 14px;
@@ -614,7 +619,7 @@
 
 .compare-accordion .accordion-button .hide-btn {
     background:#F4F7FB ;
-    padding: 8px 10px;
+    padding: 4px 10px;
     border-radius: 3px;
     font-weight: 400;
     font-size: 14px;
@@ -624,6 +629,7 @@
     justify-content: center;
     min-width: 120px;
     /* border: 1px solid var(--secondary-color); */
+    border: 1px solid #326ebf;
     text-transform: capitalize;
 }
 
