--- a/src/app/styles/product.css
+++ b/src/app/styles/product.css
@@ -971,3 +971,10 @@
     color: var(--heading-color);
     font-family: 'Lato', sans-serif !important;
 }
+
+.font-20{
+    font-size:20px !important;
+}
+.question-marker-icon{
+    margin-left: 6px;
+}
