--- a/src/app/styles/best-page.css
+++ b/src/app/styles/best-page.css
@@ -288,7 +288,7 @@
   margin: 20px 0 0;
 }
 
-.similar-guides h6 {
+.similar-guides p {
   font-weight: 400;
   font-size: 18px;
   line-height: 34px;
@@ -326,7 +326,7 @@
 .product-listing-inner-content-table-accordion .product-listing-inner-content-table-accordion-btn .accordion-button{
   justify-content: center !important;
 }
-.filter-section h4 {
+.filter-section .tech-features {
   background: #f4f7fb;
   padding: 8px 10px;
   text-transform: uppercase;
@@ -336,7 +336,7 @@
   font-size: 16px !important;
   line-height: 34px;
   text-transform: uppercase;
-  font-family: "BR Hendrix Semi Bold";
+  /* font-family: "BR Hendrix Semi Bold"; */
 }
 
 .filter-accordion .accordion-item {
