--- a/src/app/styles/responsive.css
+++ b/src/app/styles/responsive.css
@@ -548,7 +548,19 @@
     top: 0;
     transition: .5s;
   }
-
+  .compare-container.nonSticky {
+    position:static !important;
+    display: none;
+  }
+ 
+  .compare-container.isSticky{
+    box-shadow: 0px 2px 8px rgba(77, 82, 136, 0.15);
+    position: fixed !important ;
+    top: 0px;
+    display: block !important;
+    z-index: 9999;
+    background: #f5f8fb;
+  }
   .row{
     margin-left: 0 !important;
     margin-right: 0 !important;
@@ -1748,14 +1760,18 @@
     max-width: 50% !important;
     width: 50% !important;
   }
-  .compare-container thead.nonSticky {
+  .compare-container.nonSticky {
     position:static !important;
+    display: none;
   }
-  .compare-container thead.isSticky{
+ 
+  .compare-container.isSticky{
     box-shadow: 0px 2px 8px rgba(77, 82, 136, 0.15);
-    position: sticky !important ;
-    top: -1px;
-    z-index: 1000;
+    position: fixed !important ;
+    top: 0px;
+    display: block !important;
+    z-index: 9999;
+    background: #f5f8fb;
   }
   .breadcrumb {
     padding-bottom: 8px !important;
