--- a/src/app/styles/best-page.css
+++ b/src/app/styles/best-page.css
@@ -453,7 +453,7 @@
   display: flex;
   gap: 10px;
   align-items: center;
-  padding-left: 50px;
+  padding-left: 10px;
 }
 
 .filtered-data span {
@@ -487,7 +487,7 @@
   border: 1px solid rgba(39, 48, 78, 0.2);
   border-radius: 4px;
   position: relative;
-  max-width: 96% !important;
+  /* max-width: 96% !important; */
   margin: 50px 0 15px auto !important;
 }
 
@@ -536,9 +536,9 @@
   font-weight: 400;
   font-size: 18px;
   color: var(--secondary-color);
-  right: 100%;
+  /* right: 100%;
   position: absolute;
-  top: 10px;
+  top: 10px; */
 }
 
 .best-product-listing .product-listing-inner-content {
@@ -961,9 +961,7 @@ body .product-listing-inner-content .score-section .score-detail h6 {
   display: block;
   width: fit-content;
   padding: 0px 20px;
-  position: absolute;
-  bottom: 100%;
-  left: 14px;
+ 
   font-weight: 400;
   font-size: 14px;
   line-height: 34px;
