--- a/src/app/styles/best-page.css
+++ b/src/app/styles/best-page.css
@@ -323,12 +323,23 @@
 .filter-section {
   margin: 0 0 20px;
 }
+
+.filter-section .show_more {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  color: var(--secondary-color);
+  font-weight: 600;
+  padding: 8px 0;
+  cursor:pointer;
+}
 .product-listing-inner-content-table-accordion .product-listing-inner-content-table-accordion-btn .accordion-button{
   justify-content: center !important;
 }
 .filter-section .tech-features {
   background: #f4f7fb;
-  padding: 8px 10px;
+  padding: 4px 10px;
   text-transform: uppercase;
   margin: 0 0 8px !important;
   color: var(--heading-color);
@@ -361,7 +372,7 @@
   line-height: 34px;
   border: none !important;
   box-shadow: none;
-  padding: 8px 16px 4px;
+  padding: 4px 16px 4px;
   color: var(--heading-color);
 }
 
@@ -884,10 +895,10 @@
   text-transform: uppercase !important;
   font-weight: 400 !important;
   font-size: 16px;
-  line-height: 34px;
+  line-height: 49px;
   color: var(--heading-color);
   font-family: 'Lato', sans-serif !important;
-  padding: 11.5px;
+  padding: 0 15px;
   display: block;
   border-bottom: 1px solid #dee2e6;
 }
