--- a/src/app/styles/style.css
+++ b/src/app/styles/style.css
@@ -680,21 +680,26 @@ footer .search-icon{
     width: 100%;
 }
 
-.flex-box .left_box .number {
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%, 20% 50%);
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%, 20% 50%);
-    background: #ecf2fb;
-    width: 35px;
-    height: 25px;
+.flex-box .left_box .ribbon-number {
+    color: var(--secondary-color);
+    font-size: 16px;
+    font-weight: 400;
+    position: relative;
+    margin-left: -10px;
+}
+
+.flex-box .left_box .ribbon-number p {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto !important;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-weight: 400;
-    font-size: 18px;
-    color: var(--secondary-color);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.20);
-    margin-left: -10px;
 }
+
 @media screen and (min-width:992px) {
     .flex-box{
         padding-right: 15px;
@@ -709,7 +714,7 @@ footer .search-icon{
 }
 .flex-box .left_box .box_content {
     font-weight: 400;
-    font-size: 14px;
+    font-size: 15px;
     line-height: 28px;
     background: #fff;
     border: 1px solid #d4d6dc;
@@ -766,9 +771,23 @@ footer .search-icon{
 }
 
 .compare-section-plus:hover .compare-text {
-    padding: 0 4px;
+    padding: 0 8px;
     font-weight: 500 !important;
     transform: translateX(0);
     transition: all 0.3s ease;
     width: auto;
 }
+
+.alternatives-border-top{
+    border-top: 1px solid #d4d6dc;
+}
+
+.alternatives-border-top .alternatives{
+    margin:0 !important;
+    padding:4px 0 !important;
+}
+
+.product-listing-inner-content-table-accordion-btn > .accordion-button {
+    padding: 8px 15px;
+}
+
