--- a/src/app/styles/best-page.css
+++ b/src/app/styles/best-page.css
@@ -274,7 +274,7 @@
   position: relative;
 }
 
-.best-product-wrapper:before {
+/* .best-product-wrapper:before {
   content: "";
   width: 100%;
   height: 170px;
@@ -282,7 +282,7 @@
   bottom: 0;
   background: linear-gradient(0deg, white 50%, transparent 100%);
   z-index: 1;
-}
+} */
 
 .similar-guides {
   margin: 20px 0 0;
