--- a/src/app/styles/best-page.css
+++ b/src/app/styles/best-page.css
@@ -320,6 +320,14 @@
   color: var(--white-color);
 }
 
+.filter-container {
+  height: calc(100vh - 20px);
+  overflow-y: auto;
+  position: sticky;
+  top: 10px;
+  z-index: 1000;
+}
+
 .filter-section {
   margin: 0 0 20px;
 }
@@ -333,6 +341,48 @@
   font-weight: 600;
   cursor:pointer;
 }
+
+.product-listing-inner-content-table-accordion .spec-section .show_more {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 13px;
+  color: var(--secondary-color);
+  font-weight: 600;
+  cursor:pointer;
+}
+
+.product-listing-inner-content-table-accordion .inline-ranking-section {
+  display: flex;
+  gap: 10px;
+  padding: 8px 15px;
+  border-top: 1px solid #ddd;
+  align-items: center;
+}
+
+.product-listing-inner-content-table-accordion .inline-ranking-section img{
+  width: 10px;
+  height: 10px;
+  margin:0 8px
+}
+
+.product-listing-inner-content-table-accordion .inline-ranking-section .ranking-heading {
+  text-transform: uppercase !important;
+  font-weight: 400 !important;
+  font-size: 16px;
+  color: var(--heading-color);
+  font-family: 'Lato', sans-serif !important;
+  display: block;
+}
+
+.product-listing-inner-content-table-accordion .inline-ranking-section p{
+  color: var(--secondary-color);
+}
+
+.product-listing-inner-content-table-accordion .inline-ranking-section p span{
+  color: #000;
+}
+
 .product-listing-inner-content-table-accordion .product-listing-inner-content-table-accordion-btn .accordion-button{
   justify-content: center !important;
 }
@@ -1044,6 +1094,13 @@ body .product-listing-inner-content .score-section .score-detail h6 {
 }
 .filter-accordion .accordion-item .form-check label{
   padding-left: 3px;
+  width:100%
+}
+.filter-accordion .accordion-item .form-check label > span {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
 }
 .color-change .score-detail span {
   color: var(--secondary-color) !important;
