filter hover bg color

--- a/src/app/styles/best-page.css
+++ b/src/app/styles/best-page.css
@@ -1212,3 +1212,7 @@ padding: 4px 15px;
     top: 8px !important;
   }
 }
+
+.filter-accordion .accordion-item:hover {
+  background: #eff5fc !important;
+}
