--- a/src/app/styles/best-page.css
+++ b/src/app/styles/best-page.css
@@ -140,6 +140,17 @@
 .compare-container tbody .tr-bg-color th,
 .compare-container tbody .tr-bg-color td {
   background: #f4f7fb;
+  padding: 15px 0 !important;
+}
+
+.compare-container tbody .tr-bg-color th{
+  padding-left:10px !important;
+}
+
+.compare-container tbody .show_more {
+  display: block;
+  text-align: center;
+  cursor: pointer;
 }
 
 .compare-container tbody .sub-inner-padding {
@@ -258,6 +269,10 @@
 .compare-container-wrapper {
   position: relative;
   padding: 20px 0 0;
+}
+
+.compare-container-wrapper.no-before:before{
+  display: none !important;
 }
 
 .compare-container-wrapper:before {
@@ -411,6 +426,14 @@
   line-height: 34px;
   text-transform: uppercase;
   /* font-family: "BR Hendrix Semi Bold"; */
+}
+
+.filter-section .tech-features-price {
+  background: #f4f7fb;
+  padding: 4px 10px;
+  margin: 0 0 -13px !important;
+  line-height: 34px;
+  height: 96px;
 }
 
 .filter-accordion .accordion-header i, .filter-accordion .accordion-header .custom-switch
@@ -1215,4 +1238,104 @@ padding: 4px 15px;
 
 .filter-accordion .accordion-item:hover {
   background: #eff5fc !important;
+}
+
+
+/* new table style css */
+
+.product_listing_table table{
+  width: 100%;
+  border-collapse: collapse;
+
+}
+
+.product_listing_table table tr td, .product_listing_table table tr th {
+  padding: 5px 10px;
+  border: 2px solid #d4d6dc;
+  color: var(--heading-color);
+
+}
+
+.product_listing_table table tr td{
+  font-size: 14px;
+  text-align: center;
+  position:relative;
+}
+
+.product_listing_table table tr th{
+  font-size: 16px;
+  text-transform: capitalize;
+}
+
+.product_listing_table table tr:nth-child(odd) td, .product_listing_table table tr:nth-child(odd) th {
+  background: #F4F7FB;
+}
+
+.counter_style{
+ 
+  padding: 8px;
+  border-radius: 5px;
+  color: var(--white-color);
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 24px;
+  display: inline-block;
+}
+.counter-one{
+  background: var(--heading-color);
+}
+.counter-two{
+  background: var(--secondary-color);
+}
+
+.product_listing_table table .star__icon{
+  position: absolute;
+  top: 50%;
+  bottom: 0;
+  right: 5px;
+  margin: auto;
+  font-size: 22px;
+  color: #FF8F0B;
+  transform: translate(-5px, -50%);
+}
+.new-acc_style.accordion button.accordion-button {
+  justify-content: center !important;
+  background: transparent !important;
+  border-width: 0;
+}
+
+.new-acc_style.accordion button.accordion-button .hide-btn, .new-acc_style.accordion button.accordion-button .show-btn  {
+  font-size: 16px !important;
+  font-weight: bold !important;
+  background: transparent !important;
+  border-width: 0 !important;
+  text-transform: uppercase !important;
+}
+
+
+.new-acc_style.accordion .product_listing_table table tr:nth-child(odd) td, .new-acc_style.accordion .product_listing_table table tr:nth-child(odd) th {
+  background: #F4F7FB !important;
+}
+.product_listing_table table tr:last-child td, .product_listing_table table tr:last-child th{
+  background:transparent !important;
+}
+.new-acc_style.accordion .product_listing_table table tr th{
+  border-left:0px !important;
+}
+.new-acc_style.accordion .product_listing_table table tr td:last-child{
+  border-right:0px !important;
+}
+.new-acc_style.accordion .product_listing_table table tr:last-child th{
+  border-bottom:0px !important;
+}
+.new-acc_style.accordion .product_listing_table table tr:last-child td{
+  border-bottom:0px !important;
+}
+.new-acc_style.accordion .accordion-body{
+  padding-left:0px !important;
+  padding-right:0px !important;
+}
+
+.product_listing_table table tr th{
+  text-align:left !important;
 }
