--- a/src/app/_chart/BaseChart/index.scss
+++ b/src/app/_chart/BaseChart/index.scss
@@ -12,17 +12,19 @@
     }
   
     &__gridlines {
-      color: steelblue;
+      color: rgba(39, 48, 78, 0.1);
     }
     
     &__axis {
-      color: steelblue;
+      color: rgba(39, 48, 78, 0.8);
       stroke-width: 1;
   
       &-label {
-        stroke: steelblue;
-        font-size: 18px;
-        font-weight: 500;
+        stroke: rgba(39, 48, 78, 0.80);;
+        font-size: 22px;
+        font-weight: 400;
+        font-style: italic;
+        line-height: 26px;
       }
     }
   
@@ -40,3 +42,11 @@
     }
   }
   
+  .base__axis {
+    text{
+      color: rgba(39, 49, 75, 0.70);
+    }
+    path, line{
+      display:none;
+    }
+  }
