--- a/src/app/_chart/PieChart/index.css
+++ b/src/app/_chart/PieChart/index.css
@@ -1,5 +1,27 @@
-.pieChart{ position:relative;}
-.pieChart>div:first-child{ position:absolute; top:50%; transform:translateY(-50%); right:0;}
-.pieChart>div:first-child .legend-item{ display:flex; align-items:center; margin:4px 0;}
-.pieChart>div:first-child .legend-item>div{ width:20px !important; height:20px !important; border-radius:100px; margin-right:8px;}
-.pieChart>div:first-child .legend-item>span{ font-size:13px; color: rgba(39, 48, 78, 0.80);}
+.pieChart{ position: relative;display: flex; align-items: center;justify-content: center;}
+.legendBox{ display:grid; gap:8px}
+.legend-item{ display:flex; align-items:center; margin:0;}
+.legend-item>div{ width:20px !important; height:20px !important; border-radius:100px; margin-right:8px;}
+.legend-item>span{ font-size:14px; font-weight: 400; color: rgba(39, 48, 78, 0.80);}
+/* .tooltip {
+    position: absolute;
+    text-align: center;
+    padding: 8px;
+    background-color: #333;
+    color: #fff;
+    border-radius: 4px;
+    pointer-events: none;
+  } */
+  .tooltip {
+    display: flex;
+    position: fixed;
+    text-align: center;
+    padding: 8px;
+    background-color: rgba(255, 255, 255, 1);
+    color: rgba(0, 0, 0, 0.3);
+    border-radius: 4px;
+    pointer-events: none;
+  }
+  .arc:hover {
+    cursor: pointer;
+  }
