--- a/src/app/_chart/BaseChart/index.scss
+++ b/src/app/_chart/BaseChart/index.scss
@@ -50,3 +50,22 @@
       display:none;
     }
   }
+
+  .moreDigit text{ transform: translate(-16px, 6px) rotate(-20deg);}
+  .axis__x-label{transform: translate(0, 20px);}
+  .fontStyle{
+    font-size: 13px; font-weight: 400;
+    color: rgba(39, 49, 75, 0.7);
+  }
+  .base__tooltip{
+    display: flex;
+    position: fixed;
+    text-align: center;
+    padding: 8px;
+    //background-color: rgba(255, 255, 255, 1);
+    background-color: rgba(255, 255, 255, 1);
+    color: rgba(0, 0, 0, 0.3);
+    border-radius: 4px;
+    pointer-events: none;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+  }
