--- a/src/app/_chart/PieChart/index.css
+++ b/src/app/_chart/PieChart/index.css
@@ -21,6 +21,7 @@
     color: rgba(0, 0, 0, 0.3);
     border-radius: 4px;
     pointer-events: none;
+    border: 1px solid rgba(0, 0, 0, 0.3);
   }
   .arc:hover {
     cursor: pointer;
