style: vertical bar hover effect

--- a/src/app/_chart/VerticalChart/index.scss
+++ b/src/app/_chart/VerticalChart/index.scss
@@ -4,6 +4,8 @@
     }
   }
   
-  // .arc:hover {
-  //   cursor: pointer;
-  // }
+  .rect-hover {
+    &:hover {
+      fill:rgb(67, 126, 206);
+    }   
+  }
