style: fixd font family

--- a/src/app/_chart/HorizontalChart/index.css
+++ b/src/app/_chart/HorizontalChart/index.css
@@ -1,5 +1,5 @@
 text{
- font-family: 'BR Hendrix' ;   
+ font-family: 'Lato, sans-serif' ;   
  font-weight:400;
  font-size: 14px;
  fill: rgba(39, 49, 75, 0.7);
