--- a/src/app/_chart/HorizontalChart/index.css
+++ b/src/app/_chart/HorizontalChart/index.css
@@ -1,5 +1,6 @@
-text{
+.tick text{
  font-family: 'Lato, sans-serif' ;   
+ font-style: normal;   
  font-weight:400;
  font-size: 14px;
  fill: rgba(39, 49, 75, 0.7);
@@ -8,4 +9,16 @@ text{
 }
 .rect-size{
     translate: 10px 0;
+}
+.bar-label{
+    font-family: 'Lato, sans-serif' ;   
+ font-style: normal;   
+ font-weight:400;
+ font-size: 14px;
+ fill: rgba(39, 49, 75, 0.7);
+ color: rgba(39, 49, 75, 0.7);
+ white-space: pre-wrap;
+}
+svg{
+    overflow: visible;
 }
