--- a/src/app/_chart/BaseChart/index.scss
+++ b/src/app/_chart/BaseChart/index.scss
@@ -20,7 +20,7 @@
       stroke-width: 1;
   
       &-label {
-        stroke: rgba(39, 48, 78, 0.80);;
+        //stroke: rgba(39, 48, 78, 0.80);;
         font-size: 18px;
         font-weight: 400;
         font-style: italic;
@@ -69,4 +69,11 @@
     border-radius: 4px;
     pointer-events: none;
     border: 1px solid rgba(0, 0, 0, 0.3);
+  }
+  .axis-label{
+    fill: rgba(39, 48, 78, 0.80) !important;
+    font-size: 18px;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 26px; 
   }
