--- a/src/app/_chart/BaseChart/index.scss
+++ b/src/app/_chart/BaseChart/index.scss
@@ -3,7 +3,7 @@
     &__container {
       position: relative;
       width: fit-content;
-      margin: 20px;
+      margin: 0;
     }
   
     &__svg-container {
@@ -76,4 +76,10 @@
     font-style: italic;
     font-weight: 400;
     line-height: 26px; 
+  }
+  .chartTitle{
+    color: rgba(39, 48, 78, 0.80);
+    font-size: 18px;
+    font-style: italic;
+    font-weight: 400;
   }
